# simple-chunk-allocator

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
examples/: bench.rs  minimal.rs
freestanding-linux-example/: Cargo.toml  README.md  x86_64-unknown-none.json
freestanding-linux-example/.cargo/: config.toml
freestanding-linux-example/src/: main.rs
src/: allocator.rs  chunk_cache.rs  compiler_hints.rs  global.rs  lib.rs  macros.rs  page_aligned.rs
